generated-tests/tests/snapshots/tsx/tsx__test_generated_jsx_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <div>{value14}</div>;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier element)
      (jsx_element
        (jsx_opening_element
          (identifier div)
        )
        (jsx_expression
          (identifier value14)
        )
        (jsx_closing_element
          (identifier div)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
