generated-tests/tests/snapshots/tsx/tsx__test_generated_jsx_self_closing_element.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <Component2 prop3={value16} />;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier element)
      (jsx_self_closing_element
        (identifier Component2)
        (jsx_attribute
          (property_identifier)
          (jsx_expression
            (identifier value16)
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
