generated-tests/tests/snapshots/tsx/tsx__test_generated_literal_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value17: 'hello' = 'hello';

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value17)
      (type_annotation
        (literal_type
          (string
            (string_fragment)
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value17",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "value17",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 7,
            end_line: 1,
            end_column: 14,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
