generated-tests/tests/snapshots/tsx/tsx__test_generated_new_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
new TestClass2(arg)

AST:
(program
  (expression_statement
    (new_expression
      (identifier TestClass2)
      (arguments
        (identifier arg)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
