generated-tests/tests/snapshots/tsx/tsx__test_generated_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
{ binding }

AST:
(program
  (statement_block
    (expression_statement
      (identifier binding)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
