generated-tests/tests/snapshots/tsx/tsx__test_generated_primary_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const value2: Type = 42;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (identifier value2)
      (type_annotation
        (type_identifier)
      )
      (number)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value2",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
